Fix T55202: 3D Cursor Snapping not working correctly in Edit Mode.

Use `mesh_eval_final` in this case.